# gBar

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  flake.nix  meson.build  meson_options.txt  module.nix  result
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
css/: style.css  style.css.map  style.scss
css/dracula/: LICENSE
data/: config  update.sh
example/: main.cpp  meson.build
protocols/: sni-item.xml  sni-watcher.xml
src/: AMDGPU.h  AudioFlyin.cpp  AudioFlyin.h  Bar.cpp  Bar.h  BluetoothDevices.cpp  BluetoothDevices.h  CSS.cpp  CSS.h  Common.h  Config.cpp  Config.h  Hyprland.h  Log.cpp  Log.h  NvidiaGPU.h  Plugin.cpp  Plugin.h  PulseAudio.h  SNI.cpp  SNI.h  System.cpp  System.h  Wayland.cpp  Wayland.h  Widget.cpp  Widget.h  Window.cpp  Window.h  Workspaces.cpp  Workspaces.h  gBar.cpp
